# fastprp

./: Cargo.toml  OPTIMIZATIONS.md  USAGE.md
.claude/: launch.json
benches/: bench.rs
examples/: demo.rs
src/: aes_wasm_simd.rs  bitstring.rs  cache.rs  fastprp.rs  lib.rs  wasm.rs
tests/: wasm_bench.js  wasm_browser_bench.html  wasm_test.js
