[package]
name = "fastprp"
version = "0.1.0"
edition = "2021"
description = "Fast Pseudo-Random Permutations for Small Domains (Stefanov & Shi 2012)"
license = "MIT"

[dependencies]
aes = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rayon = "1.10"

[[bench]]
name = "bench"
harness = false

[[example]]
name = "demo"
