[package]
name = "fastprp"
version = "0.1.0"
edition = "2021"
description = "Fast Pseudo-Random Permutations for Small Domains (Stefanov & Shi 2012)"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aes = "0.8"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[features]
default = []
wasm = ["wasm-bindgen", "js-sys"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rayon = "1.10"

[[bench]]
name = "bench"
harness = false

[[example]]
name = "demo"
